--- a/android/gradle/wrapper/gradle-wrapper.properties
+++ b/android/gradle/wrapper/gradle-wrapper.properties
@@ -3,5 +3,5 @@ distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
 # distributionUrl=https\://services.gradle.org/distributions/gradle-2.14.1-all.zip
-distributionUrl=file\:///F:/react-native/gradle/gradle-2.14.1-all.zip
-# distributionUrl=file\:///C:/Users/xiaoFen/Desktop/work%20space/gradle/gradle-2.14.1-all.zip
+# distributionUrl=file\:///F:/react-native/gradle/gradle-2.14.1-all.zip
+distributionUrl=file\:///C:/Users/xiaoFen/Desktop/work%20space/gradle/gradle-2.14.1-all.zip
